Dark mode assert fix 3

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  color: black;
+  background-color: black;
 }
 
 @layer utilities {
